// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MacroCard renders correctly when goal is reached 1`] = `
<View
  className="flex-1 p-4 rounded-lg items-center bg-green-100"
>
  <View
    className="items-center justify-center mb-2"
  >
    <View
      className="rotate-90"
      height={40}
      viewBox="0 0 40 40"
      width={40}
    >
      <View
        cx={20}
        cy={20}
        fill="transparent"
        r={18}
        stroke="#ffffff"
        strokeWidth={4}
      />
      <View
        cx={20}
        cy={20}
        fill="transparent"
        r={18}
        stroke="#22c55e"
        strokeDasharray={113.09733552923255}
        strokeDashoffset={0}
        strokeLinecap="round"
        strokeWidth={4}
      />
    </View>
  </View>
  <Text
    className="font-semibold text-base text-green-800"
  >
    Carbs
  </Text>
  <Text
    className="text-sm text-green-800"
  >
    200
    /
    200
     
    g
  </Text>
</View>
`;

exports[`MacroCard renders correctly with all props 1`] = `
<View
  className="flex-1 p-4 rounded-lg items-center bg-blue-100"
>
  <View
    className="items-center justify-center mb-2"
  >
    <View
      className="rotate-90"
      height={40}
      viewBox="0 0 40 40"
      width={40}
    >
      <View
        cx={20}
        cy={20}
        fill="transparent"
        r={18}
        stroke="#ffffff"
        strokeWidth={4}
      />
      <View
        cx={20}
        cy={20}
        fill="transparent"
        r={18}
        stroke="#3b82f6"
        strokeDasharray={113.09733552923255}
        strokeDashoffset={51.83627878423159}
        strokeLinecap="round"
        strokeWidth={4}
      />
    </View>
  </View>
  <Text
    className="font-semibold text-base text-blue-800"
  >
    Protein
  </Text>
  <Text
    className="text-sm text-blue-800"
  >
    65
    /
    120
     
    g
  </Text>
</View>
`;
